rodiles-blur-2015/styles.css
/*body {
    background-image: url(img/background@2x.jpg);
}



body { 
  background: url(img/background2@2x.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
} */

body {
    background-image: url(img/background2.jpg);
}

#bg {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -2;
    /*background: #FFF;*/
    background-size: cover !important;
}

#presentation {
	height: 100vh;
}

/* Custom styles */

/*Fonts and general styling*/

/* <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,700' rel='stylesheet' type='text/css'> */

/* latin */
@font-face {
  font-family: 'Raleway';
  font-style: normal;
  font-weight: 200;
  src: local('Raleway ExtraLight'), local('Raleway-ExtraLight'), url(http://fonts.gstatic.com/s/raleway/v9/8KhZd3VQBtXTAznvKjw-kwsYbbCjybiHxArTLjt7FRU.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

/* latin */
@font-face {
  font-family: 'Raleway';
  font-style: normal;
  font-weight: 300;
  src: local('Raleway Light'), local('Raleway-Light'), url(http://fonts.gstatic.com/s/raleway/v9/-_Ctzj9b56b8RgXW8FAriQsYbbCjybiHxArTLjt7FRU.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

/* latin */
@font-face {
  font-family: 'Raleway';
  font-style: normal;
  font-weight: 400;
  src: local('Raleway'), 
  url(http://fonts.gstatic.com/s/raleway/v9/QAUlVt1jXOgQavlW5wEfxVKPGs1ZzpMvnHX-7fPOuAc.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, 
  U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}
/* latin */
@font-face {
  font-family: 'Raleway';
  font-style: normal;
  font-weight: 700;
  src: local('Raleway Bold'), local('Raleway-Bold'), 
  url(http://fonts.gstatic.com/s/raleway/v9/JbtMzqLaYbbbCL9X6EvaIwsYbbCjybiHxArTLjt7FRU.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, 
  U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

p.simple {
	color: #ffffff;
	color: transparent;
	margin: 1% 0 2% 0;
}

p.simplify, p.consulting, p.ksimple {
	margin: 1% 0 1% 0;
}

p.simple, p.consulting, p.simplify, p.ksimple {
	font-size: 15rem;
	font-family: 'Raleway', Arial, "Helvetica", Helvetica, sans-serif;
  	font-weight: 200;
	/*font-family: Arial, "Helvetica", Helvetica, sans-serif;*/
	text-rendering: optimizeLegibility;
	/*font-weight: 700;*/
	line-height: 13rem;
	text-align: center;
	-webkit-transition: all 2.584s ease;
	-moz-transition: all 2.584s ease;
	-o-transition: all 2.584s ease;
	transition: all 2.584s ease;
}

.row {max-width: 100rem; margin: 0 auto ;}
body {font-family: 'Raleway', Arial, "Helvetica", Helvetica, sans-serif; font-weight: 300; text-rendering: optimizeLegibility; color:#ffffff;}
h1, h2, h3, h4, h5, h6 {font-family: 'Raleway', Arial, "Helvetica", Helvetica, sans-serif; font-weight: 200; text-rendering: optimizeLegibility;}
button, .button {font-family: 'Raleway', Arial, "Helvetica", Helvetica, sans-serif;}

h1              { font-size: 5rem; margin: .67rem 0; }
h2              { font-size: 2rem; margin: .75rem 0; }
h3              { font-size: 1.5rem; margin: .83rem 0; }
h4              { font-size: 1.125rem; margin: .83rem 0; }
h5              { font-size: 1rem; margin: 1.5rem 0; }
h6              { font-size: .83rem; margin: 1.67rem 0; }
p 				{ font-size: 1.125rem;}

a:hover{color: rgba(255,255,255,0.5);}

/* Spacings */

.center {text-align: center ;}
.right {text-align: right ;}

.mtb16 {margin: 1.1rem 0 ;}
.mb16 {margin-bottom: 1.1rem ;}

.mtb32 {margin: 2rem 0 ;}
.mb32 {margin-bottom: 2rem ;}

.mtb64 {margin-top: 4rem 0 ;}
.mt64 {margin-top: 4rem ;}
.mb64 {margin-bottom: 4rem ;}

.mt21f {margin-top: 21% ;}

ul {margin: 0 ;}
li {padding: 1.25rem 0; font-size:1.125rem;}

#me, #skills, #portfolio, #contact {padding: 0.9375rem 0.9375rem; margin: 2rem auto ;}

.fixed {
	position: fixed;
	width: 100%;
	top: 0;
	right: 0;
	left: 0;
	z-index: 99;
}

/* Header and Menu */

.header h1, .header h2, .header h3, .header h4, .header h5, .header h6, .header p {color:#ffffff;}

.menu {
	background-color: rgba(0,0,0,0.6);
	opacity: 0;
	visibility: hidden;
	-webkit-transition: all 1.597s ease; 
	-moz-transition: all 1.597s ease; 
	-o-transition: all 1.597s ease; 
	transition: all 1.597s ease;
}

.black {
	-webkit-transition: all 1.597s ease; 
	-moz-transition: all 1.597s ease; 
	-o-transition: all 1.597s ease;
	background-color: rgba(41,41,43,0.85);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #303032), color-stop(1.0, rgba(41,41,43,0.85)));
	background: -moz-linear-gradient(top, #303032, rgba(41,41,43,0.85));
}

.black.bs {
	box-shadow: 1px 1px 55px #000000;
}

.bs {
	box-shadow: 1px 1px 25px #888888;
	opacity: 1;
	visibility: visible;
}

.menu a {
	color: #ffffff;
	margin: 0 ;
	font-size: 1.5rem;
	text-decoration: none;
}

	.menu a:hover {
		color: rgba(255,255,255,0.5);
		opacity: 0.8;
	}

.black a {
	color: #ffffff;
}

.menu .bh1:hover, .menu .bh2:hover, .menu .bh4:hover, .menu .bh6:hover {
	border-bottom: 2px solid #2577BE;
}

div.bh1.active, div.bh2.active, div.bh4.active, div.bh6.active {border-bottom: 2px solid #2577BE;}

/*#me, #skills, #portfolio, #contact {
	border-top: 3px solid #2577BE;
}*/

.lh-m {
	line-height: 4rem ; 
	text-align: center;
	max-width: 160rem;
}

/* Mobile menu */

ul {
    list-style-type:none;
    overflow:hidden;
    padding: 0;
}

ul li a {
	text-decoration: none;
	color: #454545;
}

div.fixed.center.visible-xs {
	background: rgba(255, 255, 255, 0.85);
	visibility: hidden; 
	opacity:0; 
	transition:opacity 1.597s; 
	-webkit-transition: 1.597s opacity; 
	-moz-transition: 1.597s opacity; 
	-webkit-transition: all 1.597s ease; 
	-moz-transition: all 1.597s ease; 
	-o-transition: all 1.597s ease; 
	transition: all 1.597s ease;
	box-shadow: 1px 1px 55px #888888;
}

	div.fixed.center.visible-xs.show {visibility: visible; opacity: 1;}

/* Custom Divs */

#main {visibility: hidden; opacity:0; transition:opacity 1.597s; -webkit-transition: 1.597s opacity; 
	-moz-transition: 1.597s opacity; -webkit-transition: all 1.597s ease; -moz-transition: all 1.597s ease; 
	-o-transition: all 1.597s ease; transition: all 1.597s ease;}
#main.show {visibility: visible; opacity: 1;}

#me h2, #skills h2, #portfolio h2, #contact h2 {
	font-size: 2.5rem;
	color:rgba(255,255,255,0.7);
}

#me h3, #skills h3, #portfolio h3, #contact h3 {
	font-size: 210%;
  	text-align: center;
  	padding: 0.5rem 0;
}

#tweets {
	display: block;
}

div.row.clients {
	/*background-color: #888888;*/
	padding: 1rem;
}

.modal-overlay {
	background: rgb(255,255,255);
	background: rgba(255,255,255,0.95);
}

.modal-footer, .modal-header {
	color: #000;
}

.modal-close {
	color: #000;
}

.modal-direction {
	color: #000;
}

/* Button customization */

button:focus {outline:0;}

button:hover {
  background-color: #000000;
  border: none;
}

.menuB{
	font-size: 1.25rem;
    margin: 0 auto;
    color: #ffffff;
	background-color: #000000;
	border: none;
}

.tweets{
	font-size: 1.25rem;
    margin: 0 auto;
    color: #ffffff;
	background-color: #000000;
}

button.submit {
	font-size: 1.25rem;
	background-color: rgb(29, 98, 80);
	border: none;
	border-color: transparent;
	color: #ffffff;
}

	button.submit:hover {
		background-color: rgba(29, 98, 80, 0.5);
		border: none;
		border-color: transparent;
	}

	button.submit:focus {outline: 0;}

button.submit:active {
	background-color: rgb(37, 119, 190);
	border: none;
	border-color: transparent;
}

/* Footer */

footer {
	-webkit-transition: all 1.597s ease; 
	-moz-transition: all 1.597s ease; 
	-o-transition: all 1.597s ease; 
	transition: all 1.597s ease;
	padding: 2rem 0 1rem;
	max-width: 100% !important;
  	background: rgba(0,0,0,0.45);
}

footer .col-s-2 {	
	padding: 0 0 0.5rem;
}

footer  a {
	text-decoration: none;
	padding: 1.125rem 0;
	font-size: 1.125rem;
	color:#ffffff;
}

footer p {
	margin-top: 0;
}

/* Forms */

.contactForm {
	display: none;
}

#cname, #cemail, #ccomment {
	width: 95%;
}

#ccomment {
	min-height: 8rem;
}

.no-edit, input, select, textarea {
	color: #888;
}

p.success {
	color: #2577BE;
	font-size: 1.5rem;
	background: rgba(255,255,255,0.95);
	padding: 1rem;
}

label.error {
	color: #90040A;
	background: rgba(255,255,255,0.75);
	padding: 1rem;
}

.counter {
	font-size: 2rem;
	font-weight: 700;
	color: #51B54F;
}

/* Custom media queries */

@media only screen and (max-width: 64em) { 
	p.simple, p.consulting, p.simplify, p.ksimple {
		font-size: 10rem ; 
		line-height: 9rem ;
	}
}

@media only screen and (max-width: 48em) { 
	p.simple, p.simplify, p.ksimple {
		font-size: 6rem ; 
		line-height: 5.5rem ;
	}

	.menu a {
	  font-size: 1.125rem;
	}

	footer > div > div > div {
		padding: 0.75rem 0;
	  	font-size: 1.125rem;
	}
}

@media only screen and (max-width: 40.063em) { 
	h1 {font-size: 3.75rem;}
	#me, #skills, #portfolio, #contact {margin-top: 0.5rem ;padding: 0.9375rem 0.5rem;}
	p.simple {font-size: 4.5rem ; line-height: 4rem ; margin-top: 35%;}
	p.simplify, p.consulting, p.ksimple {font-size: 4.5rem ; line-height: 4rem ;}
	nav {display:none;}
}

/* ADA helpers */

[tabindex]:focus, a:focus, area:focus, button:focus, input:focus, object:focus, select:focus, textarea:focus {
	outline: none;
	outline-offset: -1px;
}

